--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -51,3 +51,8 @@ add_executable(table_image_replace_test table_image_replace_test.cpp)
 target_include_directories(table_image_replace_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/_deps/pugixml-src/src)
 target_link_libraries(table_image_replace_test QtDocxTemplate::core Qt6::Gui)
 add_test(NAME qtdocxtemplate_table_image_replace COMMAND table_image_replace_test)
+
+add_executable(multipart_replace_test multipart_replace_test.cpp)
+target_include_directories(multipart_replace_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/_deps/pugixml-src/src)
+target_link_libraries(multipart_replace_test QtDocxTemplate::core)
+add_test(NAME qtdocxtemplate_multipart_replace COMMAND multipart_replace_test)
