Builder API with helper functions for variable creation & it's tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,6 +70,7 @@ add_library(QtDocxTemplate
     src/ImageVariable.cpp
     src/BulletListVariable.cpp
     src/TableVariable.cpp
+    src/Builder.cpp
     src/opc/Package.cpp
     src/xml/XmlPart.cpp
     src/engine/RunModel.cpp
