updated aliases and related examples/tests

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(text_variables)
 add_subdirectory(image_variable)
 add_subdirectory(table_variable)
+add_subdirectory(parity_workflow)
