--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -71,3 +71,8 @@ add_executable(diagnostics_test diagnostics_test.cpp)
 target_include_directories(diagnostics_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/_deps/pugixml-src/src)
 target_link_libraries(diagnostics_test QtDocxTemplate::core Qt6::Core Qt6::Gui)
 add_test(NAME qtdocxtemplate_diagnostics COMMAND diagnostics_test)
+
+add_executable(parity_aliases_test parity_aliases_test.cpp)
+target_include_directories(parity_aliases_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/_deps/pugixml-src/src)
+target_link_libraries(parity_aliases_test QtDocxTemplate::core Qt6::Core Qt6::Gui)
+add_test(NAME qtdocxtemplate_parity_aliases COMMAND parity_aliases_test)
