table column placeholder check and corresponding test

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -76,3 +76,8 @@ add_executable(parity_aliases_test parity_aliases_test.cpp)
 target_include_directories(parity_aliases_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/_deps/pugixml-src/src)
 target_link_libraries(parity_aliases_test QtDocxTemplate::core Qt6::Core Qt6::Gui)
 add_test(NAME qtdocxtemplate_parity_aliases COMMAND parity_aliases_test)
+
+add_executable(table_column_validator_test table_column_validator_test.cpp)
+target_include_directories(table_column_validator_test PRIVATE ${CMAKE_SOURCE_DIR}/src ${CMAKE_BINARY_DIR}/_deps/pugixml-src/src)
+target_link_libraries(table_column_validator_test QtDocxTemplate::core Qt6::Core Qt6::Gui)
+add_test(NAME qtdocxtemplate_table_column_validator COMMAND table_column_validator_test)
